@@ -96,6 +96,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="changelog.txt" />
+    <Content Include="Content\Levels\1.txt" />
+    <Content Include="Content\Levels\10.txt" />
+    <Content Include="Content\Levels\11.txt" />
+    <Content Include="Content\Levels\2.txt" />
+    <Content Include="Content\Levels\3.txt" />
+    <Content Include="Content\Levels\4.txt" />
+    <Content Include="Content\Levels\5.txt" />
+    <Content Include="Content\Levels\6.txt" />
+    <Content Include="Content\Levels\7.txt" />
+    <Content Include="Content\Levels\8.txt" />
+    <Content Include="Content\Levels\9.txt" />
+    <Content Include="Content\Levels\levels_status.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
